add debug args and jib maven plugin

--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,16 @@
           </dependency>
         </dependencies>
       </plugin>
+        <plugin>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>jib-maven-plugin</artifactId>
+            <version>0.9.8</version>
+            <!--<configuration>-->
+                <!--<to>-->
+                    <!--<image>myimage</image>-->
+                <!--</to>-->
+            <!--</configuration>-->
+        </plugin>
     </plugins>
   </build>
   <reporting>
@@ -215,6 +225,7 @@
           <check />
         </configuration>
       </plugin>
+
     </plugins>
   </reporting>
 
